--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
 
+        <activity android:name="paf.garikaadventure.PlayerMenuActivity" />
+        <activity android:name="paf.garikaadventure.FightActivity" />
+
+    </application>
 </manifest>
